[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/enemy/slime-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Enemy/SlimeEnemy.gd" type="Script" id=2]
[ext_resource path="res://zones_boxes/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://zones_boxes/hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5938, 6.7636 )

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/idle/node = SubResource( 4 )
states/idle/position = Vector2( 303, 74 )
states/walk/node = SubResource( 5 )
states/walk/position = Vector2( 467, 74 )
transitions = [ "idle", "walk", SubResource( 6 ), "walk", "idle", SubResource( 7 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="SlimeEnemy" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )
move_speed = 40

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3.5 )
texture = ExtResource( 1 )
vframes = 3
hframes = 8
frame = 3

[node name="WorldBody" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[node name="Position2D" type="Position2D" parent="."]

[node name="hurtbox" parent="Position2D" instance=ExtResource( 3 )]
position = Vector2( 0, 8 )
collision_layer = 16
collision_mask = 0

[node name="CollisionPolygon2D" parent="Position2D/hurtbox" index="0"]
position = Vector2( 0, -8 )
polygon = PoolVector2Array( -13.611, -6.82593, -14.4636, 7.92363, 14.2682, 7.83837, 13.5862, -6.57015 )

[node name="hitbox" parent="Position2D" instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionPolygon2D" parent="Position2D/hitbox" index="0"]
polygon = PoolVector2Array( -6.10834, -6.22912, 7.10658, -6.14387, 11.1137, -2.22202, 13.6714, 5.02487, 13.7567, 7.32683, -13.4405, 7.32683, -12.5027, 4.00178, -10.286, -1.11367 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Position2D/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Position2D/hurtbox"]

[editable path="Position2D/hitbox"]
